--- a/files/ceph-all-sample.yml
+++ b/files/ceph-all-sample.yml
@@ -28,6 +28,8 @@ dummy:
 #  luminous: 12
 #  mimic: 13
 #  nautilus: 14
+#  octopus: 15
+#  pacific: 16
 #  dev: 99
 
 
@@ -143,7 +145,7 @@ dummy:
 #ceph_stable_repo: "{{ ceph_mirror }}/debian-{{ ceph_stable_release }}"
 
 #nfs_ganesha_stable: true # use stable repos for nfs-ganesha
-#nfs_ganesha_stable_branch: V2.8-stable
+#nfs_ganesha_stable_branch: V3.3-stable
 #nfs_ganesha_stable_deb_repo: "{{ ceph_mirror }}/nfs-ganesha/deb-{{ nfs_ganesha_stable_branch }}/{{ ceph_stable_release }}"
 
 
@@ -153,13 +155,13 @@ dummy:
 #ceph_stable_distro_source: "{{ ansible_facts['distribution_release'] }}"
 
 
-# REPOSITORY: RHCS VERSION RED HAT STORAGE (from 4.0)
+# REPOSITORY: RHCS VERSION RED HAT STORAGE (from 5.0)
 #
 # Enabled when ceph_repository == 'rhcs'
 #
-# This version is supported on RHEL 7 and 8
+# This version is supported on RHEL 8
 #
-#ceph_rhcs_version: "{{ ceph_stable_rh_storage_version | default(4) }}"
+#ceph_rhcs_version: "{{ ceph_stable_rh_storage_version | default(5) }}"
 #valid_ceph_repository_type:
 #  - cdn
 #  - iso
@@ -311,7 +313,6 @@ dummy:
 #monitor_address_block: subnet
 # set to either ipv4 or ipv6, whichever your network is using
 #ip_version: ipv4
-#mon_use_fqdn: false # if set to true, the MON name used will be the fqdn in the ceph.conf
 
 #mon_host_v1:
 #  enabled: True
@@ -329,39 +330,12 @@ dummy:
 # eg:
 #  cephfs_data_pool:
 #    name: "{{ cephfs_data if cephfs_data is defined else 'cephfs_data' }}"
-#    pg_num: "{{ osd_pool_default_pg_num }}"
-#    pgp_num: "{{ osd_pool_default_pg_num }}"
-#    rule_name: "replicated_rule"
-#    type: 1
-#    erasure_profile: ""
-#    expected_num_objects: ""
-#    size: "{{ osd_pool_default_size }}"
-#    min_size: "{{ osd_pool_default_min_size }}"
-#    pg_autoscale_mode: False
 #    target_size_ratio: 0.2
 #cephfs: cephfs # name of the ceph filesystem
 #cephfs_data_pool:
 #  name: "{{ cephfs_data if cephfs_data is defined else 'cephfs_data' }}"
-#  pg_num: "{{ osd_pool_default_pg_num }}"
-#  pgp_num: "{{ osd_pool_default_pg_num }}"
-#  rule_name: "replicated_rule"
-#  type: 1
-#  erasure_profile: ""
-#  expected_num_objects: ""
-#  size: "{{ osd_pool_default_size }}"
-#  min_size: "{{ osd_pool_default_min_size }}"
-#  pg_autoscale_mode: False
 #cephfs_metadata_pool:
 #  name: "{{ cephfs_metadata if cephfs_metadata is defined else 'cephfs_metadata' }}"
-#  pg_num: "{{ osd_pool_default_pg_num }}"
-#  pgp_num: "{{ osd_pool_default_pg_num }}"
-#  rule_name: "replicated_rule"
-#  type: 1
-#  erasure_profile: ""
-#  expected_num_objects: ""
-#  size: "{{ osd_pool_default_size }}"
-#  min_size: "{{ osd_pool_default_min_size }}"
-#  pg_autoscale_mode: False
 #cephfs_pools:
 #  - "{{ cephfs_data_pool }}"
 #  - "{{ cephfs_metadata_pool }}"
@@ -393,12 +367,11 @@ dummy:
 
 ## MDS options
 #
-#mds_use_fqdn: false # if set to true, the MDS name used will be the fqdn in the ceph.conf
 #mds_max_mds: 1
 
 ## Rados Gateway options
 #
-#radosgw_frontend_type: beast # For additional frontends see: https://docs.ceph.com/en/nautilus/radosgw/frontends/
+#radosgw_frontend_type: beast # For additional frontends see: https://docs.ceph.com/en/octopus/radosgw/frontends/
 
 #radosgw_civetweb_port: 8080
 #radosgw_civetweb_num_threads: 512
@@ -410,6 +383,7 @@ dummy:
 #radosgw_frontend_port: "{{ radosgw_civetweb_port if radosgw_frontend_type == 'civetweb' else '8080' }}"
 # The server private key, public certificate and any other CA or intermediate certificates should be in one file, in PEM format.
 #radosgw_frontend_ssl_certificate: ""
+#radosgw_frontend_ssl_certificate_data: "" # certificate contents to be written to path defined by radosgw_frontend_ssl_certificate
 #radosgw_frontend_options: "{{ radosgw_civetweb_options if radosgw_frontend_type == 'civetweb' else '' }}"
 #radosgw_thread_pool_size: 512
 
@@ -576,7 +550,7 @@ dummy:
 # DOCKER #
 ##########
 #ceph_docker_image: "ceph/daemon"
-#ceph_docker_image_tag: latest-nautilus
+#ceph_docker_image_tag: latest-octopus
 #ceph_docker_registry: docker.io
 #ceph_docker_registry_auth: false
 #ceph_docker_registry_username:
@@ -615,101 +589,33 @@ dummy:
 # eg:
 #  openstack_glance_pool:
 #    name: "images"
-#    pg_num: "{{ osd_pool_default_pg_num }}"
-#    pgp_num: "{{ osd_pool_default_pg_num }}"
-#    rule_name: "replicated_rule"
-#    type: 1
-#    erasure_profile: ""
-#    expected_num_objects: ""
+#    rule_name: "my_replicated_rule"
 #    application: "rbd"
-#    size: "{{ osd_pool_default_size }}"
-#    min_size: "{{ osd_pool_default_min_size }}"
 #    pg_autoscale_mode: False
+#    pg_num: 16
+#    pgp_num: 16
 #    target_size_ratio: 0.2
 #openstack_glance_pool:
 #  name: "images"
-#  pg_num: "{{ osd_pool_default_pg_num }}"
-#  pgp_num: "{{ osd_pool_default_pg_num }}"
-#  rule_name: "replicated_rule"
-#  type: 1
-#  erasure_profile: ""
-#  expected_num_objects: ""
 #  application: "rbd"
-#  size: "{{ osd_pool_default_size }}"
-#  min_size: "{{ osd_pool_default_min_size }}"
-#  pg_autoscale_mode: False
 #openstack_cinder_pool:
 #  name: "volumes"
-#  pg_num: "{{ osd_pool_default_pg_num }}"
-#  pgp_num: "{{ osd_pool_default_pg_num }}"
-#  rule_name: "replicated_rule"
-#  type: 1
-#  erasure_profile: ""
-#  expected_num_objects: ""
 #  application: "rbd"
-#  size: "{{ osd_pool_default_size }}"
-#  min_size: "{{ osd_pool_default_min_size }}"
-#  pg_autoscale_mode: False
 #openstack_nova_pool:
 #  name: "vms"
-#  pg_num: "{{ osd_pool_default_pg_num }}"
-#  pgp_num: "{{ osd_pool_default_pg_num }}"
-#  rule_name: "replicated_rule"
-#  type: 1
-#  erasure_profile: ""
-#  expected_num_objects: ""
 #  application: "rbd"
-#  size: "{{ osd_pool_default_size }}"
-#  min_size: "{{ osd_pool_default_min_size }}"
-#  pg_autoscale_mode: False
 #openstack_cinder_backup_pool:
 #  name: "backups"
-#  pg_num: "{{ osd_pool_default_pg_num }}"
-#  pgp_num: "{{ osd_pool_default_pg_num }}"
-#  rule_name: "replicated_rule"
-#  type: 1
-#  erasure_profile: ""
-#  expected_num_objects: ""
 #  application: "rbd"
-#  size: "{{ osd_pool_default_size }}"
-#  min_size: "{{ osd_pool_default_min_size }}"
-#  pg_autoscale_mode: False
 #openstack_gnocchi_pool:
 #  name: "metrics"
-#  pg_num: "{{ osd_pool_default_pg_num }}"
-#  pgp_num: "{{ osd_pool_default_pg_num }}"
-#  rule_name: "replicated_rule"
-#  type: 1
-#  erasure_profile: ""
-#  expected_num_objects: ""
 #  application: "rbd"
-#  size: "{{ osd_pool_default_size }}"
-#  min_size: "{{ osd_pool_default_min_size }}"
-#  pg_autoscale_mode: False
 #openstack_cephfs_data_pool:
 #  name: "manila_data"
-#  pg_num: "{{ osd_pool_default_pg_num }}"
-#  pgp_num: "{{ osd_pool_default_pg_num }}"
-#  rule_name: "replicated_rule"
-#  type: 1
-#  erasure_profile: ""
-#  expected_num_objects: ""
-#  application: "rbd"
-#  size: "{{ osd_pool_default_size }}"
-#  min_size: "{{ osd_pool_default_min_size }}"
-#  pg_autoscale_mode: False
+#  application: "cephfs"
 #openstack_cephfs_metadata_pool:
 #  name: "manila_metadata"
-#  pg_num: "{{ osd_pool_default_pg_num }}"
-#  pgp_num: "{{ osd_pool_default_pg_num }}"
-#  rule_name: "replicated_rule"
-#  type: 1
-#  erasure_profile: ""
-#  expected_num_objects: ""
-#  application: "rbd"
-#  size: "{{ osd_pool_default_size }}"
-#  min_size: "{{ osd_pool_default_min_size }}"
-#  pg_autoscale_mode: False
+#  application: "cephfs"
 #openstack_pools:
 #  - "{{ openstack_glance_pool }}"
 #  - "{{ openstack_cinder_pool }}"
@@ -725,7 +631,7 @@ dummy:
 # By default, keys will be auto-generated.
 #
 #openstack_keys:
-#  - { name: client.glance, caps: { mon: "profile rbd", osd: "profile rbd pool=volumes, profile rbd pool={{ openstack_glance_pool.name }}"}, mode: "0600" }
+#  - { name: client.glance, caps: { mon: "profile rbd", osd: "profile rbd pool={{ openstack_cinder_pool.name }}, profile rbd pool={{ openstack_glance_pool.name }}"}, mode: "0600" }
 #  - { name: client.cinder, caps: { mon: "profile rbd", osd: "profile rbd pool={{ openstack_cinder_pool.name }}, profile rbd pool={{ openstack_nova_pool.name }}, profile rbd pool={{ openstack_glance_pool.name }}"}, mode: "0600" }
 #  - { name: client.cinder-backup, caps: { mon: "profile rbd", osd: "profile rbd pool={{ openstack_cinder_backup_pool.name }}"}, mode: "0600" }
 #  - { name: client.gnocchi, caps: { mon: "profile rbd", osd: "profile rbd pool={{ openstack_gnocchi_pool.name }}"}, mode: "0600", }
@@ -755,9 +661,9 @@ dummy:
 #dashboard_rgw_api_admin_resource: ''
 #dashboard_rgw_api_no_ssl_verify: False
 #dashboard_frontend_vip: ''
-#node_exporter_container_image: "prom/node-exporter:v0.17.0"
 #prometheus_frontend_vip: ''
 #alertmanager_frontend_vip: ''
+#node_exporter_container_image: "docker.io/prom/node-exporter:v0.17.0"
 #node_exporter_port: 9100
 #grafana_admin_user: admin
 # This variable must be set with a strong custom password when dashboard_enabled is True
@@ -765,9 +671,9 @@ dummy:
 # We only need this for SSL (https) connections
 #grafana_crt: ''
 #grafana_key: ''
-#grafana_container_image: "grafana/grafana:5.4.3"
 # When using https, please fill with a hostname for which grafana_crt is valid.
 #grafana_server_fqdn: ''
+#grafana_container_image: "docker.io/grafana/grafana:5.4.3"
 #grafana_container_cpu_period: 100000
 #grafana_container_cpu_cores: 2
 # container_memory is in GB
@@ -775,7 +681,7 @@ dummy:
 #grafana_uid: 472
 #grafana_datasource: Dashboard
 #grafana_dashboards_path: "/etc/grafana/dashboards/ceph-dashboard"
-#grafana_dashboard_version: nautilus
+#grafana_dashboard_version: master
 #grafana_dashboard_files:
 #  - ceph-cluster.json
 #  - cephfs-overview.json
@@ -793,7 +699,8 @@ dummy:
 #  - grafana-piechart-panel
 #grafana_allow_embedding: True
 #grafana_port: 3000
-#prometheus_container_image: "prom/prometheus:v2.7.2"
+#grafana_conf_overrides: {}
+#prometheus_container_image: "docker.io/prom/prometheus:v2.7.2"
 #prometheus_container_cpu_period: 100000
 #prometheus_container_cpu_cores: 2
 # container_memory is in GB
@@ -806,7 +713,7 @@ dummy:
 # Uncomment out this variable if you need to customize the retention period for prometheus storage.
 # set it to '30d' if you want to retain 30 days of data.
 #prometheus_storage_tsdb_retention_time: 15d
-#alertmanager_container_image: "prom/alertmanager:v0.16.2"
+#alertmanager_container_image: "docker.io/prom/alertmanager:v0.16.2"
 #alertmanager_container_cpu_period: 100000
 #alertmanager_container_cpu_cores: 2
 # container_memory is in GB
@@ -815,6 +722,7 @@ dummy:
 #alertmanager_conf_dir: /etc/alertmanager
 #alertmanager_port: 9093
 #alertmanager_cluster_port: 9094
+#alertmanager_conf_overrides: {}
 # igw
 #
 # `igw_network` variable is intended for allowing dashboard deployment with iSCSI node not residing in the same subnet than what is defined in `public_network`.
@@ -891,7 +799,6 @@ dummy:
 # DEPRECATION #
 ###############
 
-#use_fqdn_yes_i_am_sure: false
 
 
 ######################################################
@@ -902,3 +809,4 @@ dummy:
 #container_exec_cmd:
 #docker: false
 #ceph_volume_debug: "{{ enable_ceph_volume_debug | ternary(1, 0)  }}"
+
